--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_for @contact do |f| %>          
+<%= form_for @contact do |f| %>
     <div class="panel-body">
-      
+
       <% if @contact.errors.any? %>
 
         <div class="row">
@@ -19,12 +19,12 @@
 
       <% end %>
 
-      
+
       <div class="form-horizontal">
         <div class="row">
           <div class="col-md-8">
             <div class="form-group">
-           
+
               <%= f.label :name, class: "control-label col-md-3" %>
               <div class="col-md-8">
                 <%= f.text_field :name, class: "form-control" %>
@@ -61,6 +61,14 @@
                 <%= f.text_area :address, class: "form-control" %>
               </div>
             </div>
+
+              <%# new %>
+             <div class="form-group">
+              <%= f.label :image %>
+               <%= f.file_field :image %>
+              </div>
+
+
       <div class="form-group">
               <label for="group" class="control-label col-md-3">Group</label>
               <div class="col-md-5">
@@ -110,7 +118,7 @@
             <div class="col-md-offset-3 col-md-6">
               <button type="submit" class="btn btn-primary">Save</button>
 
-              <%= link_to "Cancel", contacts_path, class: "btn btn-default" %>              
+              <%= link_to "Cancel", contacts_path, class: "btn btn-default" %>
             </div>
           </div>
         </div>
