--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -61,14 +61,6 @@
                 <%= f.text_area :address, class: "form-control" %>
               </div>
             </div>
-
-              <%# new %>
-             <div class="form-group">
-              <%= f.label :image %>
-               <%= f.file_field :image %>
-              </div>
-
-
       <div class="form-group">
               <label for="group" class="control-label col-md-3">Group</label>
               <div class="col-md-5">
@@ -100,6 +92,8 @@
             <div class="fileinput fileinput-new" data-provides="fileinput">
               <div class="fileinput-new thumbnail" style="width: 150px; height: 150px;">
                 <img src="http://placehold.it/150x150" alt="Photo">
+                <%# new %>
+                <%# <%= link_to image_tag(@contact.image, style:"width:100%"), contacts_path%> %>
               </div>
               <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 150px;"></div>
               <div class="text-center">
